#KSY, com_nm > company_nm 바꾸기

--- a/app/views/company/edit.jade
+++ b/app/views/company/edit.jade
@@ -80,7 +80,7 @@ block content
                         .form-group
                           label.col-sm-3.control-label 회사명
                           .col-sm-3
-                            input.form-control(type='text', name='company[com_nm]', value='#{company.com_nm}', placeholder='')
+                            input.form-control(type='text', name='company[company_nm]', value='#{company.company_nm}', placeholder='')
                         .form-group
                           label.col-sm-3.control-label 업태
                           .col-sm-3
