--- a/app/views/company/list.jade
+++ b/app/views/company/list.jade
@@ -85,7 +85,7 @@ block content
                             // - for( var i = 0 ; length = question.length > i ; i++ ){ //속도가 빠르다고 알고 있음.
                             - for( var i in company ){ //속도가 느리다고 알고 있음.
                                 tr(onclick="onclick=location.href='/company/#{company[i]._id}/show'")
-                                    td  #{company[i].com_nm}  
+                                    td  #{company[i].company_nm}  
                                     td.highlight(data-highlight='search.highlight.title') #{company[i].ceo_nm}
                                     td #{company[i].addr}
                                     td #{company[i].tel_no}
