#KSY, default.jade 링크수정

--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -157,7 +157,7 @@ html
                   li
                     a(href='gw_sub4_7.html') 업무별 담당자현황
                   li
-                    a(href='gw_sub4_7.html') 자주묻는 질문과답
+                    a(href='/oftenqa/') 자주묻는 질문과답
               - }
               - if(session.user_flag ==1){ 
               li
