--- a/app/views/usermanage/index.jade
+++ b/app/views/usermanage/index.jade
@@ -1,5 +1,6 @@
 extends ../layouts/default
 block head
+    script(src='/vendor/jquery/jquery.min.js')
     //script(src='../../util/nodemailer.js', type='text/javascript')
     script(type='text/javascript').
         function sendMail(){
