# default.jade 수정

--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -91,7 +91,7 @@ html
                   li
                     a(href='/search/qna') 자주묻는 질문과답
                   li
-                    a(href='/search/viewall')
+                    a(href='/search/user_list')
                       | 처리된 내용검색 
                       i.fa.fa-circle-o.text-pink.m-l-5
               //그룹관리자, 업무관리자,업무담당자 오픈
@@ -157,7 +157,7 @@ html
                   li
                     a(href='gw_sub4_7.html') 업무별 담당자현황
                   li
-                    a(href='/oftenqa/') 자주묻는 질문과답
+                    a(href='/oftenqna/') 자주묻는 질문과답
               - }
               - if(session.user_flag ==1){ 
               li
