#KSY oftenqna 명칭 수정

--- a/app/views/oftenqna/index.jade
+++ b/app/views/oftenqna/index.jade
@@ -58,7 +58,7 @@ block content
                 .card-box
                   .btn-toolbar.form-group
                     .pull-left
-                      a.btn.btn-primary.waves-effect.waves-light.m-l-5(href='/oftenqna/')
+                      a.btn.btn-primary.waves-effect.waves-light.m-l-5(href='/oftenqna/new')
                         i.fa.fa-edit
                         |  추가
                   table.table.table-hover(id='dvData' data-tablesaw-mode='swipe')
