#psw user_detail 명칭 변경

--- a/app/views/search/user_list.jade
+++ b/app/views/search/user_list.jade
@@ -53,7 +53,7 @@ block head
     script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
     script(src='/isu/js/incident/new.js', type='text/javascript')
 
-    script(src='/isu/js/search/viewall.js', type='text/javascript')
+    script(src='/isu/js/search/user_list.js', type='text/javascript')
 
 
         
