--- a/app/views/search/user_detail.jade
+++ b/app/views/search/user_detail.jade
@@ -2,6 +2,8 @@ extends ../layouts/default
 block head
     link(href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css', rel='stylesheet', type='text/css')
     //link(href='/isu/css/board_style.css', rel='stylesheet')
+
+    script(src='/isu/js/search/user_detail.js', type='text/javascript')
 block content
     .content-page
         // Start content
@@ -24,25 +26,25 @@ block content
                         .col-lg-12
                             .btn-toolbar.m-t-10(role='toolbar')
                                 .pull-left
-                                    button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button')
+                                    button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button' id='goList')
                                         i.fa.fa-bars
                                         |  목록
                                     button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button')
-                                        i.fa.fa-edit
-                                        |  추가수정
-                                .pull-right
+                                        i.fa.fa-print
+                                        |  인쇄
+                                //.pull-right
                                     button.btn.btn-info.waves-effect.waves-light.m-r-5(type='button')
                                         i.fa.fa-file-pdf-o
                                         |  PDF Download
                                     button.btn.btn-success.waves-effect.waves-light.m-r-5(type='button')
                                         i.fa.fa-file-excel-o
                                         |  Excel Download
-                                    button.btn.btn-primary.waves-effect.waves-light.m-r-5(type='button')
-                                        i.fa.fa-print
-                                        |  인쇄
                                     button.btn.btn-purple.waves-effect.waves-light.m-r-5(type='button')
                                         i.fa.fa-edit
                                         |  버튼
+                                    button.btn.btn-primary.waves-effect.waves-light.m-r-5(type='button')
+                                        i.fa.fa-edit
+                                        |  인쇄
                     // End Button Area
                     // start Grid Area
                     .row
