--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -151,7 +151,7 @@ html
                       | 사원정보관리(내외) 
                       i.fa.fa-circle-o.text-pink.m-l-5
                   li
-                    a(href='/manager/companywork') 회사별 상위업무지정
+                    a(href='/manager/com_process') 회사별 상위업무지정
                   li
                     a(href='gw_sub4_6.html') 처리구분 코드조회
                   li
