--- a/app/views/search/user_list.jade
+++ b/app/views/search/user_list.jade
@@ -85,16 +85,16 @@ block content
                     .form-group
                       label.col-sm-2.control-label 상위업무 
                       .col-sm-3
-                        select.form-control(id='higher_nm' name='higher_nm')
+                        select.form-control(id='higher_cd' name='higher_cd')
                           option(value ='*') 전체
                           - if (higherprocess.length > 0) {
                             - for( var i = 0 ; length = higherprocess.length > i ; i++ ){ //속도가 느리다고 알고 있음.
-                                option(value ='#{higherprocess[i].higher_nm}') #{higherprocess[i].higher_nm}
+                                option(value ='#{higherprocess[i].higher_cd}') #{higherprocess[i].higher_cd}
                             - }
                           - } 
                       label.col-sm-2.control-label 하위업무
                       .col-sm-4
-                        select.form-control(id='lower_nm' name='lower_nm')
+                        select.form-control(id='lower_cd' name='lower_cd')
                           option(value ='*') 전체
                           
                     .form-group
