--- a/app/views/search/user_detail.jade
+++ b/app/views/search/user_detail.jade
@@ -4,6 +4,10 @@ block head
     //link(href='/isu/css/board_style.css', rel='stylesheet')
 
     //script(src='/isu/js/search/user_detail.js', type='text/javascript')
+    script.
+        function goList(){
+            //alert("121212");
+        }
 block content
     .content-page
         // Start content
@@ -26,7 +30,7 @@ block content
                         .col-lg-12
                             .btn-toolbar.m-t-10(role='toolbar')
                                 .pull-left
-                                    button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button' onClick='history.back();')
+                                    button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button' onClick='javascript:goList();')
                                         i.fa.fa-bars
                                         |  목록
                                     button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button')
@@ -140,7 +144,7 @@ block content
                                                 span.badge.badge-danger #{incident.business_level}
                                         tr
                                             th.bg-muted 처리구분
-                                            td(colspan='3') 
+                                            td(colspan='3') #{incident.business_level}
                                         tr
                                             th.bg-muted 처리내용
                                             td(colspan='3') #{incident.complete_content}
